--- a/images/ruot-nem-korea-120x190x09/config.ini
+++ b/images/ruot-nem-korea-120x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-120x190x09.html
 lastopen = 2024-06-10 11:55:00
 
 [search]
-lastsearch = 2024-07-23 01:44:45
+lastsearch = 2024-07-23 02:45:24
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -130,4 +130,9 @@ url = http://www.badmintoncentral.com/forums/index.php?threads/fake-or-genuine-l
 match = 0.0%%
 title = 
 url = https://kellyloves.com/blogs/news/popular-korean-foods
+
+[www.hotels.com]
+match = 0.0%%
+title = 
+url = https://www.hotels.com/go/south-korea/great-korean-dishes
 
