--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-22 23:34:55
+lastsearch = 2024-07-23 02:49:28
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -17,9 +17,9 @@ title = Bộ ga chun chần
 url = https://everon.online/collections/types?q=bo-ga-chun-chan
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
+match = 3.6%%
+title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
 
 [demxanh.com]
 match = -32.1%%
@@ -77,9 +77,9 @@ title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
 url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
 
 [www.youtube.com]
-match = -57.1%%
-title = Bài ca bốn mùa | Liên khúc nhạc thiếu nhi hay nhất | Chun Chin
-url = https://www.youtube.com/watch?v=IAxENR2TG3k
+match = -14.3%%
+title = Bài ca bốn mùa | Chun Chin | Nhạc thiếu nhi vui nhộn
+url = https://www.youtube.com/watch?v=KEP4EdvSrP8
 
 [demolympia.com]
 match = -10.7%%
