--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-23 00:48:06
+lastsearch = 2024-07-23 02:46:57
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -17,9 +17,9 @@ title = Yechan (xikers) - Kpop Wiki - Fandom
 url = https://kpop.fandom.com/wiki/Yechan_(xikers)
 
 [kprofiles.com]
-match = -70.6%%
-title = ATEEZ Members Profile (Updated!)
-url = https://kprofiles.com/ateez-members-profile/
+match = -76.5%%
+title = xikers Members Profile (Updated!)
+url = https://kprofiles.com/xikers-members-profile/
 
 [www.qsc.com]
 match = -188.2%%
@@ -32,9 +32,9 @@ title = Mechanosensitive Channel PIEZO1 Senses Shear Force to ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 
 [books.google.com]
-match = -223.5%%
-title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=chan+5+kg+kq+song&source=bl&ots=zGiUWLrJ_C&sig=ACfU3U3WS-aUvnPWbYopz7Nj77qrk8R-Ow&hl=en&sa=X&ved=2ahUKEwjk1eSwjLuHAxXUDjQIHUjQAQYQ6AF6BAgYEAM
+match = -11.8%%
+title = Cumulated Index Medicus
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVJO1s_g&sig=ACfU3U1MO6poSZL0enPPfzz3J2TjjqVvZw&hl=en&sa=X&ved=2ahUKEwje9bH2tLuHAxXNjIkEHdOxBnsQ6AF6BAhCEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
