--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-23 02:30:51
+lastsearch = 2024-07-23 02:52:42
 
 [shopee.vn]
-match = 48.0%%
-title = Màn Chụp Tự Bung đỉnh vuông Mùng ...
-url = https://shopee.vn/Màn-Chụp-Tự-Bung-đỉnh-vuông-Mùng-Chụp-Đỉnh-Vuông-viền-trơn-cao-cấp-i.92196959.13058100091
+match = -8.0%%
+title = Màn chụp Tự Bung Đỉnh Vuông Cao Cấp Hoàng Nhân ...
+url = https://shopee.vn/Màn-chụp-Tự-Bung-Đỉnh-Vuông-Cao-Cấp-Hoàng-Nhân-Màn-Rộng-Dãi-Mắt-Nhỏ-Chống-Muỗi-II-BẢO-HÀNH-1-năm-i.397469085.9220637014
 
 [munghoangphat.com]
 match = 48.0%%
