CI images update

--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-23 02:46:57
+lastsearch = 2024-07-23 03:30:38
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVJO1s_g&sig=ACfU3U1MO6poSZL0enPPfzz3J2TjjqVvZw&hl=en&sa=X&ved=2ahUKEwje9bH2tLuHAxXNjIkEHdOxBnsQ6AF6BAhCEAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVJPWo0h&sig=ACfU3U2RnSmrZMQLe7PgGnnw6FIE9puogQ&hl=en&sa=X&ved=2ahUKEwjkoIvYvruHAxVkCjQIHapzBdUQ6AF6BAgiEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
