--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-22 20:30:58
+lastsearch = 2024-07-23 03:29:23
 
 [shopee.vn]
-match = -162.5%%
-title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ...
-url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
+match = -137.5%%
+title = Chăn cừu mai rùa siêu ấm kích thước 2mx2m3 nặng 2kg
+url = https://shopee.vn/Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng-2kg-i.18553977.19585650220
 
 [www.instagram.com]
-match = 12.5%%
-title = Hoi Chan (@hoichandraws)
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -156.2%%
+title = Rua-chan (@rua_kouhai) • Instagram photos and videos
+url = https://www.instagram.com/rua_kouhai/?hl=en
 
 [vi.wikipedia.org]
 match = 28.6%%
@@ -107,8 +107,8 @@ title = Micro mai rùa đa hướng Shure MX393/S
 url = https://tca.vn/micro-mai-rua-da-huong-shure-mx393-s/
 
 [trungtamthuocdantoc.com]
-match = -187.5%%
-title = Mai Rùa (Quy Bản) - Công Dụng và Cách Dùng Của Vị Thuốc
+match = -175.0%%
+title = Mai Rùa (Quy Bản) - Công Dụng và Cách Dùng Của Vị ...
 url = https://trungtamthuocdantoc.com/duoc-lieu/mai-rua
 
 [medcare.com.vn]
@@ -149,7 +149,7 @@ url = https://drallen.com.vn/khong-phan-loai/hoi-chung-co-rua-la-gi/
 [m.facebook.com]
 match = 66.7%%
 title = Chấn Hội Mai
-url = https://m.facebook.com/61561372675364
+url = https://m.facebook.com/61557079050657
 
 [vnba.org.vn]
 match = -175.0%%
@@ -235,4 +235,9 @@ url = https://zingnews.vn/chỉ-mình-tôi-tin-tuc/trang10.html?type=2
 match = 6.2%%
 title = Người Việt Houston
 url = https://www.facebook.com/groups/NguoiVietHouston/
+
+[www.nature.com]
+match = -43.8%%
+title = Editors | Scientific Reports
+url = https://www.nature.com/srep/about/editors
 
