--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-23 02:51:58
+lastsearch = 2024-07-23 03:28:06
 
 [www.instagram.com]
 match = -30.8%%
@@ -17,8 +17,8 @@ title = Hoi Chan Studio
 url = https://www.linkedin.com/in/yiu-hoi-chan
 
 [www.creativeboom.com]
-match = -253.8%%
-title = Hoi Chan draws on scientific illustrations to create ...
+match = -307.7%%
+title = Hoi Chan draws on scientific illustrations to create 'muted ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
 
 [www.facebook.com]
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -215.4%%
-title = Hoi Chan Translates Everyday Experiences into ...
+match = -300.0%%
+title = Hoi Chan Translates Everyday Experiences into ... - Colossal
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
