--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-23 01:48:33
+lastsearch = 2024-07-23 03:35:17
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu điều hòa cao su non - Giá Tốt, Miễn Phí Vận Chuyển ...
-url = https://shopee.vn/list/chiếu điều hòa/cao su non
+match = 35.3%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [olbedding.com]
 match = 11.8%%
-title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
-url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 4 - Nệm Uy Tín
+url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-4/
 
 [goni.vn]
 match = 38.2%%
