--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-23 02:14:56
+lastsearch = 2024-07-23 03:34:44
 
 [zhangbrickshop.com]
 match = -133.3
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -26.7%%
-title = Du học Hàn Quốc - ANIDO
-url = https://www.facebook.com/duhochanquoc.anido/posts/tin-vui-cho-du-học-sinh-d2-d10-có-thể-xin-visa-cư-trú-tại-10-tỉnh-thành-của-hq-n/722079063361574/
+match = 0.0%%
+title = Black Kingdom - D2
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=hy_AM
 
 [hoc247.vn]
 match = -213.3%%
@@ -182,9 +182,9 @@ title = 2'-deoxyuridine D2
 url = https://www.aptochem.com/p-101-2-deoxyuridine-d2.aspx
 
 [shopee.vn]
-match = -133.3%%
-title = Vitamin D2+K3 Lineabon tăng chiều cao cho bé
-url = https://shopee.vn/Vitamin-D2-K3-Lineabon-tăng-chiều-cao-cho-bé-i.230152250.24018506156
+match = -186.7%%
+title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
+url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
 
 [uspharma.vn]
 match = -16.7%%
