--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-22 23:49:15
+lastsearch = 2024-07-23 03:34:33
 
 [www.bible.com]
-match = 5.9%%
-title = Matthew 20:22-28 NKJV
-url = https://www.bible.com/bible/114/MAT.20.22-28.NKJV
+match = 23.1%%
+title = sawltak 20:22
+url = https://www.bible.com/bible/368/ACT.20.22.TDB
 
 [mizobibleblog.wordpress.com]
 match = -111.8%%
@@ -17,9 +17,9 @@ title = Exodus 1-40 - Mizo BIBle - WordPress.com
 url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
 
 [www.biblegateway.com]
-match = -147.1%%
-title = Matthew 20:22-24 NIV - “You don't know what you are
-url = https://www.biblegateway.com/passage/?search=Matthew 20:22-24&version=NIV
+match = -158.8%%
+title = Matthew 20-22 NIV - The Parable of the Workers in the
+url = https://www.biblegateway.com/passage/?search=Matthew 20-22&version=NIV
 
 [mungchup.com]
 match = -100.0%%
@@ -82,9 +82,9 @@ title = Gisele Bündchen (@gisele) • Instagram photos and videos
 url = https://www.instagram.com/gisele/?hl=en
 
 [www.jw.org]
-match = -129.4%%
-title = Namba 20 | Online Bible | New World Translation
-url = https://www.jw.org/tpi/laibreri/baibel/nwt/ol-buk/namba/20/
+match = -147.1%%
+title = Aposel 24 | Online Bible | New World Translation
+url = https://www.jw.org/tpi/laibreri/baibel/nwt/ol-buk/aposel/24/
 
 [erakini.id]
 match = -164.7%%
