--- a/images/ga-phu-es1807-180x200/config.ini
+++ b/images/ga-phu-es1807-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1807-180x200.html
 lastopen = 2024-06-07 01:02:20
 
 [search]
-lastsearch = 2024-07-23 00:49:25
+lastsearch = 2024-07-23 03:44:39
 
 [everonvn.com.vn]
 match = 4.8%%
@@ -37,8 +37,8 @@ title = Best Seedbank to order from in US? | Page 9
 url = https://www.rollitup.org/t/best-seedbank-to-order-from-in-us.908367/page-9
 
 [www.reddit.com]
-match = -9.5%%
-title = Sunday Swaps: Destash Listings
+match = -119.0%%
+title = Sunday Swaps: Destash Listings : r/Indiemakeupandmore
 url = https://www.reddit.com/r/Indiemakeupandmore/comments/t7y96v/sunday_swaps_destash_listings/
 
 [lovepotion.invisionzone.com]
