--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-07-23 03:28:40
+lastsearch = 2024-07-23 03:47:38
 
 [everonvn.com.vn]
-match = -66.7%%
-title = Bảng Giá Bán Bộ Chăn Ga Gối Hàn Quốc Everon Est-19032 ...
-url = https://everonvn.com.vn/everon/742/bo-everon-est19032
+match = 7.4%%
+title = Bộ Artemis Tk Giảm Giá - Everon
+url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia
 
 [everon.com.vn]
 match = 40.0%%
