--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-23 01:35:22
+lastsearch = 2024-07-23 03:48:20
 
 [hanvico.com.vn]
-match = 28.6%%
-title = Bộ ga chun My Youth - MY14
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my14/
+match = 33.3%%
+title = Bộ ga chun LIVING - LV54
+url = https://hanvico.com.vn/san-pham/lv54/
 
 [www.diepxuan.com]
 match = -4.8%%
@@ -33,8 +33,8 @@ url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
 match = -28.6%%
-title = Bộ chăn ga gối cotton 100%% mã màu BC22-063
-url = https://changagoidemsonghong.com/chan-ga-goi-bc63
+title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
+url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [songhong.info]
 match = -19.0%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối Everon Lite EVE14
 url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 
 [foreverbedding.net]
-match = -33.3%%
-title = Bộ ga chun Velina V14 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v14
+match = -66.7%%
+title = Bộ ga chun chần mặt Elegant H140 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140
 
 [changmibedding.com]
 match = -33.3%%
@@ -82,9 +82,9 @@ title = Bộ Ga Bọc Lụa Tơ Tằm 14
 url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-lua-to-tam-14
 
 [chandrapsaigon.com]
-match = 23.8%%
-title = Bộ chăn ga gối Everon MDST 161
-url = https://chandrapsaigon.com/bo-chan-ga-goi-everon-mdst-161/
+match = -71.4%%
+title = Bộ chăn ga gối Everon EST 23031 | BST Kết Nối 2023
+url = https://chandrapsaigon.com/bo-chan-ga-goi-everon-est-23031/
 
 [suongtuyet.com]
 match = 0.0%%
