--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-23 01:49:25
+lastsearch = 2024-07-23 03:44:27
 
 [www.instagram.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -105.6%%
-title = Người Việt Omaha Nebraska USA | 💥 NEM CUA BỂ ...
-url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
+match = -83.3%%
+title = BỐN MÙA LÀM NAIL MINNESOTA | Nem chua $16/lb
+url = https://www.facebook.com/groups/525078490925002/posts/nem-chua-16lb507-571-2922pickup-st-paulshakopeesavage-plymouth-thứ-3-4-5/7207582679341183/
 
 [thegioinem.com]
 match = -111.1%%
@@ -52,9 +52,9 @@ title = NEM CHUA HÀ THÀNH 200G
 url = https://lanchi.vn/san-pham/nem-chua-ha-thanh-200g/
 
 [www.tiktok.com]
-match = -133.3%%
-title = #mamnem #recipe #recipes #tiktokrecipe #asianfood ...
-url = https://www.tiktok.com/@jphamskitchen/video/7118403446163770667
+match = 0.0%%
+title = Platform 8 Roblox
+url = https://www.tiktok.com/discover/platform-8-roblox
 
 [thuvienphapluat.vn]
 match = -133.3%%
