CI images update

--- a/images/chieu-dieu-hoa-khong-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-16.html
 lastopen = 2024-06-09 22:26:33
 
 [search]
-lastsearch = 2024-07-23 02:50:51
+lastsearch = 2024-07-23 04:12:29
 
 [demxanh.com]
 match = 3.7%%
@@ -155,4 +155,14 @@ url = https://www.youtube.com/watch?v=ccaTWASdw7I
 match = -29.6%%
 title = Hướng dẫn sử dụng điều khiển điều hòa Panasonic
 url = https://dienmaycholon.com/kinh-nghiem-mua-sam/huong-dan-su-dung-dieu-khien-dieu-hoa-panasonic
+
+[www.nemuytin.com]
+match = -25.9%%
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 4 - Nệm Uy Tín
+url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-4/
+
+[vtvhyundai.vn]
+match = -22.2%%
+title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
 
