--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-22 21:45:17
+lastsearch = 2024-07-23 04:19:23
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -142.9%%
 title = The queen's printers' aids to the student of the holy Bible. ...
-url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDC4AqttD&sig=ACfU3U3I_wAAPpiZScbICTaLW4OAJLG1FA&hl=en&sa=X&ved=2ahUKEwi_luC_8bqHAxUXKkQIHTMfA-0Q6AF6BAhEEAM
+url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDC4DkpyA&sig=ACfU3U1rM0mqp2R0PGVOrgM-_vk4vQ4ISA&hl=en&sa=X&ved=2ahUKEwjdo5LLybuHAxU3AHkGHaU3Ac0Q6AF6BAhBEAM
 
 [www.diepxuan.com]
 match = -81.0%%
