--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-23 00:12:30
+lastsearch = 2024-07-23 04:14:55
 
 [changagoidemsonghong.com]
 match = 33.3%%
@@ -24,7 +24,7 @@ url = https://demviethong.com/chan-ga-goi-song-hong-uc16/
 [demxanh.com]
 match = 48.1%%
 title = Bộ ga gối hoạt hình Cotton CT16
-url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html?srsltid=AfmBOoqXdvFVzX0vVNiTHr7wFzE7NP3sqDAi5b-zKqYJP4xHpqr6zyDs
+url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html
 
 [chanrathanhthuy.com]
 match = -90.9%%
@@ -89,7 +89,7 @@ url = https://changagoidemsonghong.online/chan-ga-goi-song-hong-cao-cap-urban-uc
 [ninhouse.vn]
 match = 3.7%%
 title = [MÁT LẠNH] Bộ drap chăn ga gối đệm cotton 100%% ...
-url = https://ninhouse.vn/collections/bo-chan-ga-goi-dem-cotton?srsltid=AfmBOopOeMdaKT9zQz6FgA8lzmxxAWhLjt0jstm1JXkrP4osXYllHJvm
+url = https://ninhouse.vn/collections/bo-chan-ga-goi-dem-cotton
 
 [hanvico.net.vn]
 match = 0.0%%
