--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-22 17:35:00
+lastsearch = 2024-07-23 04:17:00
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = LOA SADA D209 RGB ĐEN
 url = https://lacdau.com/loa-sada-d-209-21-led-rgb-bass-sieu-tram-den
 
 [batdongsan.com.vn]
-match = -140.0%%
-title = Mua Bán Đất đường D2, Quận 9 Giá Rẻ T7/2024
-url = https://batdongsan.com.vn/ban-dat-duong-d2-61
+match = -200.0%%
+title = Mua Bán Đất Nền Dự Án đường D2, Quận 9 Giá Rẻ T7/2024
+url = https://batdongsan.com.vn/ban-dat-nen-du-an-duong-d2-61
 
 [visaforkorea-vt.com]
 match = -113.3%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -180.0%%
-title = Bệnh Viện Hoàn Mỹ Minh Hải - NỘI SOI LẤY DỊ VẬT ...
-url = https://www.facebook.com/photo.php?fbid=732691348858537&id=100063530351491&set=a.536813015113039&locale=is_IS
+match = -30.0%%
+title = 29 tháng 2
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
@@ -292,9 +292,9 @@ title = Ba lô chống lạc bé gái Princess DHF19017-D2 (Hồng) giá tốt
 url = https://concung.com/thoi-trang/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html
 
 [timbus.vn]
-match = -18.2%%
-title = Luồng tuyến
-url = http://timbus.vn/fleets.aspx
+match = 0.0%%
+title = Tìm đường xe buýt
+url = http://timbus.vn/
 
 [capnuoccholon.com.vn]
 match = -73.3%%
