--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-23 03:44:50
+lastsearch = 2024-07-23 04:12:07
 
 [zhangbrickshop.com]
 match = -133.3
@@ -92,8 +92,8 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.diepxuan.com]
-match = 33.3%%
-title = Điệp Xuân Chiếu lác D2 10
+match = 20.0%%
+title = Chiếu lác D2 10 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-lac-d2-10.html
 
 [visana.vn]
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -146.7%%
-title = Cong khuỷu tay sang 2 bên và hạ thấp thân ...
-url = https://www.facebook.com/photo.php?fbid=3056603124584773&id=1755099078068524&set=a.1772230163022082&locale=cx_PH
+match = -26.7%%
+title = Du học Hàn Quốc - ANIDO
+url = https://www.facebook.com/duhochanquoc.anido/posts/tin-vui-cho-du-học-sinh-d2-d10-có-thể-xin-visa-cư-trú-tại-10-tỉnh-thành-của-hq-n/722079063361574/
 
 [hoc247.vn]
 match = -213.3%%
@@ -182,9 +182,9 @@ title = 2'-deoxyuridine D2
 url = https://www.aptochem.com/p-101-2-deoxyuridine-d2.aspx
 
 [shopee.vn]
-match = -206.7%%
-title = Trống Cajon AB-D2 có tay vặn chỉnh kèm EQ kết nối loa
-url = https://shopee.vn/Trống-Cajon-AB-D2-có-tay-vặn-chỉnh-kèm-EQ-kết-nối-loa-Tặng-bao-và-dây-jack-3m-i.37429989.9030570402
+match = -133.3%%
+title = Vitamin D2+K3 Lineabon tăng chiều cao cho bé
+url = https://shopee.vn/Vitamin-D2-K3-Lineabon-tăng-chiều-cao-cho-bé-i.230152250.24018506156
 
 [uspharma.vn]
 match = -16.7%%
