--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-23 00:51:01
+lastsearch = 2024-07-23 04:18:52
 
 [www.reddit.com]
-match = 4.3%%
-title = Nemesis hits rank 2 Korea - 1726 lp
+match = -82.6%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
@@ -52,9 +52,9 @@ title = N. KOREAN PATROL BOATS SEIZE U.S. SPY SHIP WITH ...
 url = https://www.cia.gov/readingroom/document/06638269
 
 [www.instagram.com]
-match = -78.3%%
-title = Short trip in Korea 🇰🇷🫰 . . . #korea#koreanfood#happyday
-url = https://www.instagram.com/nao.8.9.fitness/p/CuparBnPl5S/
+match = 0.0%%
+title = 
+url = https://www.instagram.com/lol_nemesis/
 
 [wanderingchopsticks.blogspot.com]
 match = -43.5%%
