--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-22 22:47:32
+lastsearch = 2024-07-23 04:17:31
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -42,9 +42,9 @@ title = Cryptocurrency Rankings
 url = https://cryptoslate.com/coins/
 
 [30rates.com]
-match = -135.0%%
-title = Gold Price Prediction For Tomorrow, This Week And Month.
-url = https://30rates.com/gold-price-forecast-and-predictions
+match = -125.0%%
+title = USD to PHP forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
 
 [www.akc.org]
 match = -45.0%%
@@ -227,9 +227,9 @@ title = SSD prices could steady or even drop as NAND chip ...
 url = https://www.pcgamer.com/hardware/storage/ssd-prices-set-to-tumble-as-nand-chip-makers-boost-production/
 
 [www.youtube.com]
-match = -100.0%%
-title = Korean Pronunciation : 네(Ne? De?), 뭐(Mo? Bo?)
-url = https://www.youtube.com/watch?v=0LJp3kjDAmM
+match = -135.0%%
+title = Inside The "North Korea" of Africa 🇪🇷: How It Really Is (#174)
+url = https://www.youtube.com/watch?v=lAHumbL12Z8
 
 [carnegieendowment.org]
 match = -90.0%%
