CI images update

--- a/images/chieu-truc-den-khong-vien-lson-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 lastopen = 2024-06-07 00:19:36
 
 [search]
-lastsearch = 2024-07-22 15:38:21
+lastsearch = 2024-07-23 04:31:57
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = CHIẾU TRÚC 1M8 HẠT VÀNG KHÔNG VIỀN TPHCM
 url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-1m8-hat-vang-khong-vien-tphcm-80.html
 
 [shopee.vn]
-match = -3.0%%
-title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/1m2
+match = 0.0%%
+title = Chiếu trúc 1m8 - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
+url = https://shopee.vn/list/chiếu/trúc/1m8
 
 [vongxepsaigon.vn]
 match = 27.3%%
@@ -62,9 +62,9 @@ title = Bảng giá chiếu Trúc Lâm viền nâu cao cấp
 url = https://chieutruc.info/chieu-truc-lam-vien-nau/
 
 [thegioidemviet.vn]
-match = -18.2%%
-title = Mua chiếu trúc loại nào tốt nhất? Chiếu trúc có giá bao ...
-url = https://thegioidemviet.vn/mua-chieu-truc-loai-nao-tot/
+match = 66.7%%
+title = Chiếu Trúc Hạt Đen Không Viền - Hà Nội
+url = https://thegioidemviet.vn/chieu-truc-hat-den-khong-vien/
 
 [www.sendo.vn]
 match = 30.3%%
