--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-23 03:28:06
+lastsearch = 2024-07-23 04:29:45
 
 [www.instagram.com]
-match = -30.8%%
-title = Yuki Chan (@yukichan_la)
-url = https://www.instagram.com/yukichan_la/?hl=en
+match = -23.1%%
+title = Yuki Chan (@meow_kikiki)
+url = https://www.instagram.com/meow_kikiki/
 
 [www.linkedin.com]
 match = 23.1%%
@@ -17,8 +17,8 @@ title = Hoi Chan Studio
 url = https://www.linkedin.com/in/yiu-hoi-chan
 
 [www.creativeboom.com]
-match = -307.7%%
-title = Hoi Chan draws on scientific illustrations to create 'muted ...
+match = -253.8%%
+title = Hoi Chan draws on scientific illustrations to create ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
 
 [www.facebook.com]
