--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-07-23 01:35:33
+lastsearch = 2024-07-23 04:27:07
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -32,9 +32,9 @@ title = Chiếu trúc 1m6 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
 url = https://shopee.vn/list/chiếu/trúc/1m6
 
 [chieutrucsaigon.com]
-match = 12.5%%
-title = CUNG CẤP CHIẾU TRÚC QUẬN PHÚ NHUẬN
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/cung-cap-chieu-truc-quan-phu-nhuan-75.html
+match = 33.3%%
+title = BÁN CHIẾU TRÚC VIỆT NAM QUẬN 1
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/ban-chieu-truc-viet-nam-quan-1-38.html
 
 [www.lazada.vn]
 match = -62.5%%
