--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-23 04:16:07
+lastsearch = 2024-07-23 04:35:17
 
 [www.bible.com]
-match = -100.0%%
-title = MATHAIA 20 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/MAT.20.MIZCLBSI
+match = 23.1%%
+title = sawltak 20:22
+url = https://www.bible.com/bible/368/ACT.20.22.TDB
 
 [mizobibleblog.wordpress.com]
 match = -111.8%%
@@ -32,9 +32,9 @@ title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
 url = https://munghoangphat.com/
 
 [www.churchofjesuschrist.org]
-match = -205.9%%
-title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
-url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
+match = -200.0%%
+title = 3 Nifai 5 - The Church of Jesus Christ of Latter-day Saints
+url = https://www.churchofjesuschrist.org/study/scriptures/bofm/3-ne/5?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
@@ -47,8 +47,8 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70AIFITTINGS.pdf
 
 [www.bibleref.com]
-match = -23.5%%
-title = What does Matthew 20:22 mean?
+match = 0.0%%
+title = 
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
@@ -190,4 +190,9 @@ url = https://www.ufopaedia.org/index.php/Talk:Stun_Rod
 match = -182.4%%
 title = Matthew 20:22 - KJV - But Jesus answered and said, .. ...
 url = https://www.christianity.com/bible/kjv/matthew/20-22
+
+[media.defense.gov]
+match = 5.9%%
+title = The Roswell Report
+url = https://media.defense.gov/2010/Dec/01/2001329893/-1/-1/0/roswell-2.pdf
 
