--- a/images/nem-dreamland-uc-180x200x14/config.ini
+++ b/images/nem-dreamland-uc-180x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-180x200x14.html
 lastopen = 2024-06-06 16:44:35
 
 [search]
-lastsearch = 2024-07-23 02:30:17
+lastsearch = 2024-07-23 04:36:01
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,14 +17,14 @@ title = Dreamland
 url = https://www.michaelmarkowski.com/music/dreamland/
 
 [www.amazon.com]
-match = -85.2%%
-title = So far so good.. just concerned with the gel, over time.
-url = https://www.amazon.com/portal/customer-reviews/mobile-media-feed/B01N2UDS59?physicalId=61gnxFQ1kLL&imageExtension=jpg&reviewId=R3IPB6FJOG69LM
+match = -33.3%%
+title = Amazon.com: Customer Questions & Answers
+url = https://www.amazon.com/ask/questions/asin/B00AKI5Y9E/ref=ask_atf_aqp_dp
 
 [forum.mattressunderground.com]
-match = -18.5%%
-title = Review of the Ultimate Dreams mattress
-url = https://forum.mattressunderground.com/t/review-of-the-ultimate-dreams-mattress/616
+match = -70.4%%
+title = Dreamfoam 12 in 1 Customizable Mattress Vs. Tuft & ...
+url = https://forum.mattressunderground.com/t/dreamfoam-12-in-1-customizable-mattress-vs-tuft-needle-10-vs-dreafoam-ud-latex-mattress/5474
 
 [www.instagram.com]
 match = -88.9%%
@@ -35,4 +35,9 @@ url = https://www.instagram.com/p/CLmeW3fHYHe/
 match = -70.4%%
 title = Of Marshmallows and Mellon's Mystery Machine Mosaic ...
 url = https://postmarkwonderland.blog/2022/10/24/of-marshmallows-and-mellons-mystery-machine-mosaic-blanket/
+
+[www.fodors.com]
+match = 0.0%%
+title = European Bed Mysteries - Page 2
+url = https://www.fodors.com/community/europe/european-bed-mysteries-583532/page2/
 
