CI images update

--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-22 22:47:51
+lastsearch = 2024-07-23 04:47:02
 
 [demxanh.com]
 match = -42.9%%
@@ -12,9 +12,9 @@ title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 17
 url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-17.html
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
+match = -10.7%%
+title = Bộ ga chun THHome Tencel Micro 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-chun-thhome-tencel-micro-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
