--- a/images/tham-xop-18/config.ini
+++ b/images/tham-xop-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-xop-18.html
 lastopen = 2024-06-07 00:22:33
 
 [search]
-lastsearch = 2024-07-23 01:41:42
+lastsearch = 2024-07-23 04:45:28
 
 [www.sendo.vn]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Thảm xốp ghép trẻ em bộ 10 chữ số
 url = https://www.dantuongducan.com/2021/09/tham-xop-ghep-tre-em-bo-10-so.html
 
 [thamxoptraisan.com]
-match = -336.4%%
-title = Thảm Tập Võ 18mm - Thảm Xốp Trải Sàn - Thamxoptraisan.com
-url = https://thamxoptraisan.com/tham-tap-vo-18mm/
+match = -309.1%%
+title = Lưu trữ Thảm Cao Su 18mm Đỏ Dương - Thamxoptraisan.com
+url = https://thamxoptraisan.com/tu-khoa/tham-cao-su-18mm-do-duong/
 
 [thamchobe.com]
 match = -54.5%%
