CI images update

--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-23 03:30:38
+lastsearch = 2024-07-23 05:12:36
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVJPWo0h&sig=ACfU3U2RnSmrZMQLe7PgGnnw6FIE9puogQ&hl=en&sa=X&ved=2ahUKEwjkoIvYvruHAxVkCjQIHapzBdUQ6AF6BAgiEAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVJP0p2g&sig=ACfU3U0N0wUOm0516W2WNJQFLOKA24AA7w&hl=en&sa=X&ved=2ahUKEwiBsOy91buHAxV5GtAFHYK4DysQ6AF6BAglEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -230,4 +230,9 @@ url = https://koreajoongangdaily.joins.com/news/2024-07-17/entertainment/kpop/At
 match = -147.1%%
 title = Forumketqua.net - Diễn đàn xổ số lớn nhất Việt Nam!
 url = https://forumketqua1.net/
+
+[www.bandsintown.com]
+match = -188.2%%
+title = The Killer Queen Experience Wollongong Tickets, Centro ...
+url = https://www.bandsintown.com/e/105390513-the-killer-queen-experience-at-centro-cbd
 
