--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-23 02:12:09
+lastsearch = 2024-07-23 05:12:02
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -12,9 +12,9 @@ title = Chăn ga gối Everon - Điệp Xuân
 url = https://www.diepxuan.com/everon/chan-ga-goi-everon.html
 
 [songhongonline.vn]
-match = 0.0%%
-title = Bộ sản phẩm SH_BC23 079
-url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-079
+match = 4.3%%
+title = Bộ sản phẩm SH_BC23 072
+url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-73
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = 20.6%%
-title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH016
-url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh016
+match = 26.5%%
+title = Bộ Chăn Ga Gối Tơ Tằm Cao Cấp HJ03
+url = https://antbedding.com/bo-chan-ga-goi-to-tam-cao-cap-hj03
 
 [shopee.vn]
 match = 50.0%%
@@ -52,9 +52,9 @@ title = Bộ ga chun chần bốn mùa Sắc Đông EST23035 180x200
 url = https://happynest.vn/shop/EBGCTBM1820EST23035/bo-ga-chun-chan-bon-mua-sac-dong-est23035-180x200.html
 
 [everon.com.vn]
-match = 15.4%%
-title = Bộ Chăn Ga Everon ESM21013
-url = https://everon.com.vn/bo-chan-ga-everon-esm21013/
+match = 18.5%%
+title = Bộ Chăn Ga Everon ESB 22054
+url = https://everon.com.vn/bo-chan-ga-everon-esb-22054/
 
 [chandrapsaigon.com]
 match = -11.8%%
