--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-23 00:51:42
+lastsearch = 2024-07-23 05:18:19
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -17,9 +17,9 @@ title = Khay đá 18 viên nhựa Việt Nhật / Khay Đá Kim Cương 18 ...
 url = https://www.lazada.vn/products/khay-da-18-vien-nhua-viet-nhat-khay-da-kim-cuong-18-vien-khuon-lam-da-i1397366047.html
 
 [www.instagram.com]
-match = 3.6%%
-title = Đinh Trung Anh(@dinhtrunganh._)
-url = https://www.instagram.com/dinhtrunganh._/?locale=ko
+match = -10.7%%
+title = Minh Beta (@minhbeta) • Фото и видео в ...
+url = https://www.instagram.com/minhbeta/?locale=ru&hl=am-et
 
 [ninhbinhstone.com]
 match = -25.0%%
