--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-07-23 00:49:48
+lastsearch = 2024-07-23 05:19:24
 
 [demxanh.com]
 match = -94.1%%
@@ -12,9 +12,9 @@ title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp ...
 url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html
 
 [chieutrelanlan.com]
-match = -58.8%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = -64.7%%
+title = Chiếu trúc mắt nhỏ có viền màu đen 140x190cm
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-140x190cm-34.html
 
 [thegioidemtot.vn]
 match = -58.8%%
@@ -32,9 +32,9 @@ title = Bảng Giá tháng 4-5/2024 | Chiếu Trúc Hạt Đen | GIÁ TỐT ✅
 url = https://thegioidemviet.vn/chieu-truc-hat-den/
 
 [shopee.vn]
-match = -105.9%%
-title = Chiếu trúc hạt đen cao cấp, bền , đẹp, Hàng Loại I
-url = https://shopee.vn/Chiếu-trúc-hạt-đen-cao-cấp-bền-đẹp-Hàng-Loại-I-i.296736591.9319890080
+match = -164.7%%
+title = Chiếu trúc hạt đen không viền (hàng VN cao cấp loại 1, BH ...
+url = https://shopee.vn/Chiếu-trúc-hạt-đen-không-viền-(hàng-VN-cao-cấp-loại-1-BH-1-năm)-i.76806530.1285760215
 
 [vongxepsaigon.vn]
 match = -117.6%%
