--- a/images/nem-everon-150x190x9/config.ini
+++ b/images/nem-everon-150x190x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-150x190x9.html
 lastopen = 2024-06-06 17:10:22
 
 [search]
-lastsearch = 2024-07-23 04:15:07
+lastsearch = 2024-07-23 05:46:40
 
 [everonvn.com.vn]
 match = 15.0%%
@@ -80,4 +80,9 @@ url = https://shopee.vn/Đệm-bông-ép-EVERON-150-x-190-dày-5cm-9cm-15cm-18cm
 match = -40.0%%
 title = 9mm 150 Gr. SWC - 3000 Ct. (Case)
 url = https://bayoubullets.net/9mm-150-gr-swc-3000-ct-case/
+
+[www.amazon.com]
+match = -60.0%%
+title = Amazon.com: Customer Questions & Answers
+url = https://www.amazon.com/ask/questions/asin/B000CGV7T0
 
