--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-23 05:35:09
+lastsearch = 2024-07-23 05:51:26
 
 [burningman.org]
 match = 0.0%%
@@ -1010,4 +1010,9 @@ url = https://www.bbc.com/worklife/article/20230907-how-much-it-costs-to-attend-
 match = -120.0%%
 title = WWBT | Central Virginia News and Weather
 url = https://www.12onyourside.com/
+
+[www.espn.com]
+match = -160.0%%
+title = Watch ESPN - Stream Live Sports & ESPN Originals
+url = https://www.espn.com/watch/
 
