--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-23 04:17:09
+lastsearch = 2024-07-23 05:45:23
 
 [www.mantubung.com]
-match = -100.0%%
-title = Màn trẻ em tự bung chống muỗi đa năng 80cm * 100cm
-url = https://www.mantubung.com/man-tre-em-tu-bung-chong-muoi-da-nang-84845.html
+match = -138.9%%
+title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
+url = https://www.mantubung.com/
 
 [manbinhminh.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -100.0%%
-title = màn chụp cho bé giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn chụp cho bé
+match = -61.1%%
+title = màn tự bung giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn tự bung
 
 [h5.lazada.vn]
 match = -33.3%%
