--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-23 03:34:56
+lastsearch = 2024-07-23 05:44:29
 
 [m.youtube.com]
 match = -144.4%%
@@ -32,9 +32,9 @@ title = Nem Nướng Siêu To Khổng Lồ Siêu Ngon #ancungtiktok ...
 url = https://www.tiktok.com/@thenguyen_kitchen/video/7139504048713010458
 
 [www.youtube.com]
-match = -144.4%%
-title = Chuẩn VỊ NEM NƯỚNG, Bí quyết làm Nem Nướng Viên dai ...
-url = https://www.youtube.com/watch?v=C58Hlp6UXfQ
+match = -133.3%%
+title = Cách làm NEM CÔNG CHẢ PHƯỢNG đón Tết cực dễ, cực ...
+url = https://www.youtube.com/watch?v=aDzQbk-eQvQ
 
 [www.grab.com]
 match = -116.7%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -77.8%%
-title = Cộng Đồng Người Việt Denver | 👉♥️Nem chua bò
-url = https://m.facebook.com/groups/2078029092481022/posts/3794938424123405/
+match = -61.1%%
+title = Ăn vặt ngon Cali | 💥NEM NƯỚNG NHA TRANG
+url = https://m.facebook.com/groups/anvatngoncali/posts/8385390094807264/
 
 [www.proz.com]
 match = -183.3%%
@@ -117,9 +117,9 @@ title = Nem rán, chạo tôm của Việt Nam lọt top món ăn nhẹ ngon ...
 url = https://www.vietnam.vn/nem-ran-chao-tom-cua-viet-nam-lot-top-mon-an-nhe-ngon-nhat-the-gioi/
 
 [www.linkedin.com]
-match = -144.4%%
-title = interior #furniture #tongthaunoithat #nem #nemfurniture
-url = https://www.linkedin.com/posts/nemfurniturejsc_interior-furniture-tongthaunoithat-activity-7048589527807913984-OsM1?trk=public_profile_like_view
+match = 5.6%%
+title = NEM Furniture JSC's Post
+url = https://www.linkedin.com/posts/nemfurniturejsc_nem-nemfurniture-arevovietnam-activity-6908959978208534528-AOAy
 
 [forum.nameberry.com]
 match = -16.7%%
@@ -170,4 +170,9 @@ url = https://www.nemusa-group.com/en/products
 match = -100.0%%
 title = Nesco MWR18-13, Roaster Oven, 18 Quarts, Black
 url = https://www.amazon.com/NESCO-MWR18-13-Roaster-Quarts-Black/dp/B07N9LKB3V
+
+[twitter.com]
+match = -38.9%%
+title = Nem N' Nem (@NemnNemtrailer) / ...
+url = https://twitter.com/nemnnemtrailer
 
