--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-23 04:14:42
+lastsearch = 2024-07-23 06:21:11
 
 [eva.vn]
 match = -131.6%%
@@ -12,9 +12,9 @@ title = Cây này nở hoa bồng bềnh như mây, tỏa hương thơm ngát ..
 url = https://eva.vn/cay-canh-vuon/cay-nay-no-hoa-bong-benh-nhu-may-toa-huong-thom-ngat-trong-truoc-cua-se-hut-tai-loc-vao-nha-c283a587503.html
 
 [phunutoday.vn]
-match = -152.6%%
-title = 3 tuyệt chiêu người trồng hoa nhài nên biết: 1 cây nở 400 ...
-url = https://phunutoday.vn/3-tuyet-chieu-nguoi-trong-hoa-nhai-nen-biet-1-cay-no-400-bong-hoa-thom-ngat-tan-lai-no-d373856.html
+match = -173.7%%
+title = Trong nhà có 4 loại cây bỗng dưng ra hoa là điềm gở, tai họa ...
+url = https://phunutoday.vn/trong-nha-co-4-loai-cay-bong-dung-ra-hoa-la-diem-go-tai-hoa-khong-moi-ma-den-d423355.html
 
 [shopee.vn]
 match = -89.5%%
@@ -67,14 +67,14 @@ title = Cây cảnh như máy hút khói, khử mùi, trồng trong nhà ...
 url = https://danviet.vn/cay-canh-nhu-may-hut-khoi-khu-mui-trong-trong-nha-khong-khi-sach-bong-con-chieu-may-ruoc-loc-20240704031213471.htm
 
 [www.vinmec.com]
-match = -21.1%%
-title = Cây bóng nước có tác dụng gì?
-url = https://www.vinmec.com/vi/y-hoc-co-truyen/duoc-lieu/cay-bong-nuoc-co-tac-dung-gi/
+match = -15.8%%
+title = Cây dành dành có tác dụng gì?
+url = https://www.vinmec.com/vie/bai-viet/cay-danh-danh-co-tac-dung-gi-vi/
 
 [www.youtube.com]
-match = -142.9%%
-title = YouTube
-url = https://www.youtube.com/watch?v=eff5P0jzuFg
+match = -147.4%%
+title = 3 Yếu tố giúp cây hoa Mộc hương phát triển nhanh cây khoẻ ...
+url = https://www.youtube.com/watch?v=ASsdVo0WBew
 
 [trungquang.com]
 match = 0.0%%
