--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-07-23 00:36:33
+lastsearch = 2024-07-23 06:15:20
 
 [anlacphat.com]
-match = -118.8%%
-title = Đèn Led Chiếu Điểm Thanh Ray DIA807 5W Duhal
-url = https://anlacphat.com/den-led-chieu-diem-thanh-ray-dia807-5w-duhal/
+match = -100.0%%
+title = Đèn Led Gắn Nổi Chiếu Sâu DFB802 7W Duhal
+url = https://anlacphat.com/den-led-gan-noi-chieu-sau-dfb802-7w-duhal/
 
 [thacoanlac.vn]
-match = -180.0%%
-title = FD990
-url = https://thacoanlac.vn/forland-fd900
+match = -133.3%%
+title = FD700B
+url = https://thacoanlac.vn/forland-fd700b
 
 [vietnamese.alibaba.com]
 match = -256.2%%
@@ -67,9 +67,9 @@ title = Đầu Dò Nhiệt Độ Loại K, T, NTC
 url = http://www.thietbihiepphat.com/san-pham/dau-do-nhiet-do-loai-k-t-ntc-711.html
 
 [www.facebook.com]
-match = -18.8%%
-title = Shop Bé Cưng | Can Giuoc
-url = https://www.facebook.com/Shopbecung030618/
+match = -93.8%%
+title = Chandigarh, Mohali, Panchkula HelpPosts
+url = https://www.facebook.com/groups/457851077743307/?locale=vi_VN
 
 [thietbiphantich.vn]
 match = -193.8%%
