--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-23 04:17:53
+lastsearch = 2024-07-23 06:21:36
 
 [www.galottery.com]
 match = -7.7%%
@@ -52,9 +52,9 @@ title = Student Attendance Protocol
 url = https://www.gadoe.org/External-Affairs-and-Policy/Policy/Lists/Attendance/Attachments/55/660_StdAttnProt.pdf
 
 [www.regmovies.com]
-match = -223.1%%
-title = Regal Hollywood - Gainesville Movie Tickets and ...
-url = https://www.regmovies.com/theatres/regal-hollywood-cinemas-gainesville-1421
+match = -215.4%%
+title = Regal Hollywood @ North I-85 Movie Tickets and ...
+url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
 
 [www.facebook.com]
 match = -61.5%%
@@ -212,9 +212,9 @@ title =
 url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-features-benefits-of-each/
 
 [books.google.com]
-match = -7.7%%
-title = Chipewyan Texts
-url = https://books.google.com/books?id=0u4SAAAAYAAJ&pg=PA147&lpg=PA147&dq=ga+ni+long+14&source=bl&ots=lQpsETxlCJ&sig=ACfU3U0D5sx1zONDkNXpzdEHMJi4Jd7EaA&hl=en&sa=X&ved=2ahUKEwj8rKOgybuHAxXMl4kEHcRZDHsQ6AF6BAhAEAM
+match = -161.5%%
+title = Crystal Data: Inorganic compounds 1967-1969
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gw_G31H-&sig=ACfU3U2I4YRyI-_pHJWkK4Z_ddpeOoSItg&hl=en&sa=X&ved=2ahUKEwiCxtTz5LuHAxXyFDQIHf-NDsAQ6AF6BAgfEAM
 
 [ottawabraves.com]
 match = -292.3%%
