--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-22 23:35:58
+lastsearch = 2024-07-23 06:18:05
 
 [everon.online]
 match = 19.2%%
@@ -17,9 +17,9 @@ title = Phân chậm tan túi lọc NT 1602.HK3
 url = https://www.anbio.vn/products/phan-cham-tan-tui-loc-hvp-1602-hk3
 
 [m.facebook.com]
-match = -53.8%%
-title = J2TEAM Community | Logo của bác Google thú vị thật
-url = https://m.facebook.com/groups/j2team.community/posts/2420255644973208/
+match = -50.0%%
+title = Mỗi phần rau củ nhóm phát cho bà con 5kg như vậy ...
+url = https://m.facebook.com/2020tutam/photos/a.580410195428482/2383337008469116/?type=3&source=48
 
 [www.changagoidemeveron.vn]
 match = -3.8%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/mưa-bụi-thuong-hai
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUWLrD0G&sig=ACfU3U3WutM_XFJS5s1qKeDw8-ELLzooKA&hl=en&sa=X&ved=2ahUKEwiSn8OeiruHAxXWJdAFHVzjAvcQ6AF6BAglEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUWOlE3E&sig=ACfU3U1Vn6T5gN0OACppV2rLPu35hjde_A&hl=en&sa=X&ved=2ahUKEwj7vZqP5LuHAxXwAjQIHXc8BdQQ6AF6BAgkEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -67,14 +67,14 @@ title = Bộ bốn mùa chun chan 160.2m
 url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 
 [fujimaster.com.vn]
-match = -23.1%%
-title = Ghế Massage Mẫu Mới Fuji Master FJM-2192
-url = https://fujimaster.com.vn/san-pham/ghe-massage-mau-moi-fujimaster-fjm-2192
+match = -109.1%%
+title = Fuji Master
+url = https://fujimaster.com.vn/
 
 [store.steampowered.com]
-match = -76.9%%
-title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
-url = https://store.steampowered.com/app/368260?l=vietnamese&snr=2_9_100006_100202_apphubheader
+match = -84.6%%
+title = Tiết kiệm đến 50%% khi mua Anno 1602 History Edition trên ...
+url = https://store.steampowered.com/app/2820130/Anno_1602_History_Edition/?l=vietnamese&utm_source=indienova&curator_clanid=9170052
 
 [vi.wikipedia.org]
 match = -23.1%%
