--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-07-23 02:16:24
+lastsearch = 2024-07-23 06:15:43
 
 [shopee.vn]
 match = 7.4%%
@@ -58,8 +58,8 @@ url = https://www.youtube.com/watch?v=XHN7YU5NYi4
 
 [lasantevn.com]
 match = -11.1%%
-title = CHĂN LÔNG GẤU TUYẾT BẮC CỰC XÁM (SINGLE) - Lasante
-url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
+title = CHĂN LÔNG GẤU TUYẾT BẮC CỰC NÂU(DOUBLE) - Lasante
+url = https://lasantevn.com/chan-long-gau-bac-cuc-nau-2-mat-lasante-phap/
 
 [www.nguoi-viet.com]
 match = -59.3%%
