--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-23 03:46:05
+lastsearch = 2024-07-23 06:18:29
 
 [shopee.vn]
-match = -94.7%%
-title = chiếu trúc trẻ em giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc trẻ em
+match = -36.8%%
+title = Chiếu trúc, chiếu tre HT nan nhỏ siêu mát
+url = https://shopee.vn/Chiếu-trúc-chiếu-tre-HT-nan-nhỏ-siêu-mát-i.141565512.24776596764
 
 [chieutrelanlan.com]
 match = -105.3%%
@@ -17,9 +17,9 @@ title = Chiếu tre hạt vàng cao cấp mắt mai không viền 1m4x1m9
 url = https://chieutrelanlan.com/chieu-tre-hat-vang-cao-cap-mat-mai-khong-vien-1m4x1m9-85.html
 
 [vongxepsaigon.vn]
-match = -100.0%%
-title = Chiếu trúc chiếu tre 1m2 hạt nâu đen hàng tốt loại 1
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-1m2-hat-nau-den-hang-tot-loai-1/
+match = -168.4%%
+title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-120cm/
 
 [chieutrelinhchi.com]
 match = -94.7%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -136.8%%
-title = Cô Dạy Em Tập Thể Dục Buối Sáng - Nhạc Thiếu Nhi Sôi ...
-url = https://www.youtube.com/watch?v=6w-QNggXsJg
+match = -152.6%%
+title = Mẹ Ơi Có Biết - Bé Khánh Vy | Nhạc Thiếu Nhi Hay Nhất, Mẹ ...
+url = https://www.youtube.com/watch?v=4dXj1h8bQHs
 
 [dochoihoangthu.com]
 match = -121.1%%
