--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-23 03:36:58
+lastsearch = 2024-07-23 06:15:09
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Bảo tồn và phát triển nghề dệt chiếu lác - di sản phi v
 url = https://dangcongsan.vn/tu-tuong-van-hoa/bao-ton-va-phat-trien-nghe-det-chieu-lac--di-san-phi-vat-the-quoc-gia-290444.html
 
 [www.thegioididong.com]
-match = -193.8%%
-title = Tổng hợp đáp án game Đuổi hình bắt chữ (2710 câu) mới ...
-url = https://www.thegioididong.com/game-app/tong-hop-dap-an-game-duoi-hinh-bat-chu-2710-cau-moi-va-day-du-1393175
+match = -212.5%%
+title = Top 20 game online mobile (Android, iOS) hay nhất nên ...
+url = https://www.thegioididong.com/game-app/top-10-game-online-hay-nhat-tren-dien-thoai-android-ios-1312542
 
 [hawater.com.vn]
 match = -75.0%%
