--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-23 06:13:09
+lastsearch = 2024-07-23 09:50:10
 
 [www.tiktok.com]
-match = -6.2%%
-title = Huda Beauty Berry Kiss
-url = https://www.tiktok.com/discover/Huda-beauty-berry-kiss?lang=en
+match = 0.0%%
+title = Chongyun X Aether
+url = https://www.tiktok.com/discover/chongyun-x-aether
 
 [digitalmaine.com]
 match = -75.0%%
