--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-23 06:12:33
+lastsearch = 2024-07-23 09:46:11
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -32,9 +32,9 @@ title = Mechanosensitive Channel PIEZO1 Senses Shear Force to ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 
 [books.google.com]
-match = -200.0%%
-title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0t9x68Gi&sig=ACfU3U3yivVF66qxcw7j9SUcirq94dP5uA&hl=en&sa=X&ved=2ahUKEwjdmP7w4ruHAxX_MDQIHeV5DKYQ6AF6BAgiEAM
+match = -11.8%%
+title = Cumulated Index Medicus
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVKHYt4a&sig=ACfU3U1IYZlr69Sng6jl3gKhzmykXwfMLw&hl=en&sa=X&ved=2ahUKEwjd9tjQkryHAxXpkIkEHYVvAJYQ6AF6BAgbEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -87,9 +87,9 @@ title = Sl.No. QUESTION
 url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
-match = -176.5%%
-title = How much do you know about each member of the Korean ...
-url = https://www.quora.com/How-much-do-you-know-about-each-member-of-the-Korean-band-Stray-Kids-What-are-their-interests-hobbies-outside-of-music-Are-they-close-friends-in-real-life-as-well
+match = -211.8%%
+title = Does JYP allow his artists to write down their own songs or ...
+url = https://www.quora.com/Does-JYP-allow-his-artists-to-write-down-their-own-songs-or-does-he-write-it-for-them-like-how-YG-writes-songs-for-Blackpink
 
 [msaniimusicgroup.org]
 match = 0.0%%
