--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-07-23 05:53:01
+lastsearch = 2024-07-23 09:51:37
 
 [chieutrelanlan.com]
-match = 10.7%%
-title = Chiếu trúc quế lâm màu trắng không viền 180x200cm
-url = https://chieutrelanlan.com/chieu-truc-que-lam-mau-trang-khong-vien-180x200cm-39.html
+match = -7.1%%
+title = Chiếu trúc mắt nhỏ có viền màu đen 180x200cm (1m8)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-180x200cm-32.html
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -22,9 +22,9 @@ title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
 url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
 
 [shopee.vn]
-match = 67.9%%
-title = Chiếu trúc quế lâm(hàng loại1)
-url = https://shopee.vn/Chiếu-trúc-quế-lâm(hàng-loại1)-i.33372594.4619688771
+match = -3.6%%
+title = chiếu trúc hạt giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc hạt
 
 [www.diepxuan.com]
 match = 28.6%%
