--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-23 02:29:57
+lastsearch = 2024-07-23 09:45:42
 
 [www.gov.uk]
 match = -200.0%%
@@ -980,4 +980,9 @@ url = https://www.unco.edu/
 match = -166.7%%
 title = Complying with COPPA: Frequently Asked Questions
 url = https://www.ftc.gov/business-guidance/resources/complying-coppa-frequently-asked-questions
+
+[floridapoly.edu]
+match = -240.0%%
+title = Florida Polytechnic University: Undergraduate & Graduate ...
+url = https://floridapoly.edu/
 
