--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-23 06:32:41
+lastsearch = 2024-07-23 09:46:24
 
 [www.lazada.vn]
 match = -94.4%%
@@ -32,9 +32,9 @@ title = Cách bảo quản nem chua tại nhà
 url = https://cotienfoods.vn/blogs/an-ngon/cach-bao-quan-nem-chua
 
 [www.facebook.com]
-match = -150.0%%
-title = Siêu Thị Nệm - 267 Phan Đình Phùng, P15, Phú Nhuận, ...
-url = https://www.facebook.com/sieuthinem267/
+match = -94.4%%
+title = Bếp nhà Toronto 🇨🇦 | ☘️NEM CHUA LÁ ỔI 15$ 10 cái
+url = https://www.facebook.com/groups/396891758392980/posts/️nem-chua-lá-ổi-15-10-cái-nem-chua-thanh-hóa-20-15-cái-nem-chua-nhà-e-chuẩn-nem-/1218751472873667/
 
 [voz.vn]
 match = 11.1%%
