--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-07-23 05:30:53
+lastsearch = 2024-07-23 09:52:31
 
 [everonvn.com.vn]
 match = -12.5%%
@@ -27,9 +27,9 @@ title = Topper Everon - Tấm Tăng Tiện Nghi
 url = https://everon.online/collections/topper-tam-tang-tien-nghi
 
 [www.lazada.vn]
-match = 0.0%%
-title = Tấm Trải đa Năng Everon Giá Tốt T06/2024
-url = https://www.lazada.vn/tag/tam-trai-da-nang-everon/
+match = -66.7%%
+title = Tấm Trải K-Bedding By Everon ngủ văn phòng, dã ngoại ...
+url = https://www.lazada.vn/products/tam-trai-everon-lite-ngu-van-phong-da-ngoai-co-the-gap-gon-giao-mau-ngau-nhien-i708164619.html
 
 [www.everonvn.vn]
 match = -20.8%%
