--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-23 05:20:43
+lastsearch = 2024-07-23 09:51:57
 
 [www.amazon.com]
-match = -100.0%%
-title = Ghe da yeu thuong - Hugo Luân
-url = https://www.amazon.com/Ghe-thuong-Explicit-Hugo-Luân/dp/B0CM6V2CPL
+match = -309.1%%
+title = Ghe Tham Nang Da [Explicit] : franchesca: Música Digital
+url = https://www.amazon.com/-/es/franchesca/dp/B09D3V162X
 
 [chungauto.vn]
-match = -372.7%%
-title = Bọc ghế da Simili ô tô hàng chất lượng | Giá tốt, trả góp 0%%
-url = https://chungauto.vn/boc-ghe-da-simili-cho-oto-p996.html
+match = -209.1%%
+title = Bọc ghế da công nghiệp cho ô tô hàng chuẩn
+url = https://chungauto.vn/ghe-da-cong-nghiep-oto-p995.html
 
 [decoviet.vn]
 match = -200.0%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -227.3%%
-title = Ghế da chân quỳ TFMQD56 - Nội Thất Hòa Phát
-url = https://noithathoaphat.com/ghe-da-chan-quy-tfmqd56
+match = -309.1%%
+title = Ghế xoay da trưởng phòng - SG903 - Nội Thất Hòa Phát
+url = https://noithathoaphat.com/ghe-da-truong-phong-sg903
 
 [dandoxe.com]
 match = -154.5%%
@@ -42,9 +42,9 @@ title = Bọc Ghế Da Cao Cấp - KTF Auto Đà Lạt
 url = https://ktfauto.vn/product/boc-ghe-da-cao-cap/
 
 [redcar.com.vn]
-match = -236.4%%
-title = Bọc ghế da Ford Ranger (da Thái) - RedCar.com
-url = https://redcar.com.vn/san-pham/boc-ghe-da-ford-ranger-da-thai/
+match = -254.5%%
+title = Bọc ghế da ô tô Xpander (da Thái) - RedCar.com
+url = https://redcar.com.vn/san-pham/boc-ghe-da-o-to-xpander-da-thai/
 
 [bocghedaoto.net]
 match = -181.8%%
