CI images update

--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-07-23 00:47:46
+lastsearch = 2024-07-23 10:15:49
 
 [www.tui.co.uk]
 match = -153.3%%
@@ -14,7 +14,7 @@ url = https://www.tui.co.uk/flight/where-we-fly
 [cruisepanda.com]
 match = -213.3%%
 title = 14 Night Asia Cruise On Mein Schiff 5 Departing From ...
-url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-278
+url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-184
 
 [www.changiairport.com]
 match = -213.3%%
@@ -145,4 +145,9 @@ url = https://www.tripadvisor.com/ShowTopic-g1-i12084-k14596422-o10-Tui_dreamlin
 match = -240.0%%
 title = Camino Portugues Last 100km Relaxed: Tui to Santiago in ...
 url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-relaxed-tui-to-santiago-in-11-days/
+
+[www.cruisecritic.co.uk]
+match = 0.0%%
+title = 
+url = https://www.cruisecritic.co.uk/cruise/marella/marella-voyager
 
