--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-22 19:25:27
+lastsearch = 2024-07-23 10:15:19
 
 [demxanh.com]
 match = -39.1%%
-title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html
+title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
 
 [www.diepxuan.com]
-match = 26.1%%
-title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
+match = 21.7%%
+title = Chiếu cây Cao Bằng A 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html
 
 [uannga.vn]
 match = 56.5%%
@@ -22,9 +22,9 @@ title = Chiếu trúc cao bằng 150*190
 url = https://uannga.vn/index.php/shops/chieu-mat/chieu-truc-cao-bang-150-190.html
 
 [shopee.vn]
-match = -73.9%%
-title = Chiếu trúc Cao Bằng loại một, có 5 loại kích thước 1,2m ...
-url = https://shopee.vn/Chiếu-trúc-Cao-Bằng-loại-một-có-5-loại-kích-thước-1-2m-1m-0.9mvà-0.8m-i.17414239.2656259371
+match = -56.5%%
+title = Chiếu Tre Cao bằng Nan to loại đẹp Mát Lạnh Mùa Hè ...
+url = https://shopee.vn/Chiếu-Trúc-Long-Chiếu-Tre-Cao-bằng-Nan-to-loại-đẹp-Mát-Lạnh-Mùa-Hè-Đủ-Tất-Cả-Các-Kích-Thước-i.126028938.19577907706
 
 [chuyenhangviet.com]
 match = -43.5%%
