--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-22 23:23:06
+lastsearch = 2024-07-23 10:22:30
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -22,14 +22,14 @@ title = Workers' Compensation Appeals Board - Panel decisions
 url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [profiles.ucsf.edu]
-match = 5.3%%
-title = Arun Wiita, MD, PhD
-url = https://profiles.ucsf.edu/arun.wiita
+match = -21.1%%
+title = Christina Mangurian, MD, MAS
+url = https://profiles.ucsf.edu/christina.mangurian
 
 [www.ncbi.nlm.nih.gov]
-match = -168.4%%
-title = Review of influenza-associated pulmonary aspergillosis in ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7306567/
+match = -142.1%%
+title = Exercise Recommendations for Cancer-Related Fatigue ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3647480/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -41.7%%
-title = Tommi Gaines
-url = https://profiles.ucsd.edu/tommi.gaines
+match = -10.5%%
+title = Gary Vilke - UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [medboard.nv.gov]
 match = -100.0%%
@@ -380,4 +380,9 @@ url = https://iopscience.iop.org/article/10.3847/2041-8205/818/2/L22/pdf
 match = -131.6%%
 title = Molecular Landscape of Modality-Specific Exercise ...
 url = https://www.biorxiv.org/content/10.1101/2024.07.14.603458v1
+
+[www.efsa.europa.eu]
+match = -121.1%%
+title = TOLERABLE UPPER INTAKE LEVELS FOR VITAMINS AND ...
+url = https://www.efsa.europa.eu/sites/default/files/efsa_rep/blobserver_assets/ndatolerableuil.pdf
 
