--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-23 03:44:05
+lastsearch = 2024-07-23 10:39:43
 
 [scholar.google.com]
 match = -43.8%%
@@ -112,14 +112,14 @@ title = Giá vàng 9999 hôm nay tại 64 tỉnh 13/7/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -256.2%%
-title = Tin tức 24h tối 18/7: Mâu thuẫn, em trai bị anh ruột dùng hung ...
-url = https://www.youtube.com/watch?v=hteDrQdI8UA
+match = -125.0%%
+title = Chiều 18/7 Thủy hà mã báo tin vui con gái ông 5
+url = https://www.youtube.com/watch?v=0KNcjFtCq5c
 
 [books.google.com]
-match = -275.0%%
-title = Địa chí Bắc Giang: địa lý và kinh tế - Page 192 - Google Books Result
-url = https://books.google.com/books?id=QIFuAAAAMAAJ&pg=PA192&lpg=PA192&dq=chieu+lac+soc+18&source=bl&ots=7KD_ydV0xI&sig=ACfU3U0gBRAwmyd3XYG6o-El_2gQeZt3TA&hl=en&sa=X&ved=2ahUKEwj6-_i2m7uHAxVOhIkEHaJwDIsQ6AF6BAgdEAM
+match = -231.2%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=YazaAAAAMAAJ&pg=RA6-PA58&lpg=RA6-PA58&dq=chieu+lac+soc+18&source=bl&ots=ChK78wyS2j&sig=ACfU3U3svgAyRqDHc4gq4MYmeibChr5E8A&hl=en&sa=X&ved=2ahUKEwjMg6bMnryHAxUkj4kEHdAbDmQQ6AF6BAghEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
