--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-23 06:21:36
+lastsearch = 2024-07-23 10:35:24
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gw_G31H-&sig=ACfU3U2I4YRyI-_pHJWkK4Z_ddpeOoSItg&hl=en&sa=X&ved=2ahUKEwiCxtTz5LuHAxXyFDQIHf-NDsAQ6AF6BAgfEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gw-x84AZ&sig=ACfU3U1qMYKW7P8-OaUxZJGq4wXyYLplRw&hl=en&sa=X&ved=2ahUKEwjWy-HQnbyHAxV_hYkEHRVPCoUQ6AF6BAg8EAM
 
 [ottawabraves.com]
 match = -292.3%%
