--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-23 06:33:27
+lastsearch = 2024-07-23 10:42:25
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -62,9 +62,9 @@ title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [jysk.vn]
-match = -54.5%%
-title = Bed frame VEDDE 180x200 wild oak - JYSK.vn
-url = https://jysk.vn/en-US/bed-frame-vedde-180x200-wild-oak
+match = -68.2%%
+title = Mattress 180x200 GOLD S95 DREAMZONE - JYSK
+url = https://jysk.vn/en-US/spring-mattress-dreamzone-s95-r180xd200xc28cm
 
 [decosy.com]
 match = -166.7%%
@@ -103,8 +103,8 @@ url = https://filskovfriskole.skoleporten.dk/sp/298936/iframe?address=http://xn-
 
 [tonybed.com]
 match = -4.5%%
-title = Bộ Drap Ga Trải Giường Modal - 21
-url = https://tonybed.com/bo-drap-ga-trai-giuong-modal-21/
+title = Bộ Drap Ga Trải Giường Modal - 46
+url = https://tonybed.com/bo-drap-ga-trai-giuong-modal-46/
 
 [covacu.com]
 match = 28.6%%
