--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-23 04:19:23
+lastsearch = 2024-07-23 10:35:37
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -142.9%%
-title = The queen's printers' aids to the student of the holy Bible. ...
-url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDC4DkpyA&sig=ACfU3U1rM0mqp2R0PGVOrgM-_vk4vQ4ISA&hl=en&sa=X&ved=2ahUKEwjdo5LLybuHAxU3AHkGHaU3Ac0Q6AF6BAhBEAM
+match = -123.8%%
+title = A Critical Pronouncing Dictionary, and Expositor of the ...
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKBv3Buqn&sig=ACfU3U3h1J8Jk2zRktUp1aCmwPMkINXJjg&hl=en&sa=X&ved=2ahUKEwiQ3ozXnbyHAxXMj4kEHXk7BdYQ6AF6BAgdEAM
 
 [www.diepxuan.com]
 match = -81.0%%
