--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-23 02:27:07
+lastsearch = 2024-07-23 10:36:55
 
 [demxanh.com]
 match = -41.2%%
@@ -22,14 +22,14 @@ title = Thảm Lì Bali Nhập Khẩu Cao Cấp, Sang Trọng 120x160 ...
 url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html
 
 [thegioidemviet.vn]
-match = -135.3%%
-title = Thảm trải sàn Bali M2 hàng cao cấp, mẫu mã đa dạng
-url = https://thegioidemviet.vn/tham-trai-san-bali-m2/
+match = -152.9%%
+title = Thảm trải sàn Bali M3 mẫu đẹp, giá rẻ nhất thị trường
+url = https://thegioidemviet.vn/tham-trai-san-bali-m3/
 
 [sammas.vn]
-match = -105.9%%
-title = Thảm lì ép Hàn Quốc (M9 hoa xanh) - STHA0002
-url = https://sammas.vn/copy-of-tham-li-ep-han-quoc-stha0001
+match = -111.8%%
+title = Thảm lì ép Hàn Quốc (M2 hoa vàng) - STHA0011
+url = https://sammas.vn/tham-li-ep-han-quoc-stha0011
 
 [shopee.vn]
 match = -200.0%%
