--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-23 09:50:10
+lastsearch = 2024-07-23 10:34:41
 
 [www.tiktok.com]
-match = 0.0%%
-title = Chongyun X Aether
-url = https://www.tiktok.com/discover/chongyun-x-aether
+match = -6.2%%
+title = Huda Beauty Berry Kiss
+url = https://www.tiktok.com/discover/Huda-beauty-berry-kiss?lang=en
 
 [digitalmaine.com]
 match = -75.0%%
@@ -129,7 +129,7 @@ url = https://www.instagram.com/boots_tagram23/p/C8kypfiPAue/
 [www.facebook.com]
 match = -25.0%%
 title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/?locale=nb_NO
+url = https://www.facebook.com/diepxuanco/?locale=pt_BR
 
 [www.espn.com]
 match = -93.8%%
