CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-23 06:18:05
+lastsearch = 2024-07-23 10:48:54
 
 [everon.online]
 match = 19.2%%
@@ -345,4 +345,14 @@ url = https://www.booking.com/hotel/fi/holiday-home-levi-chalet-1602-by-interhom
 match = -15.4%%
 title = Điều khiển LCD1602 bằng Arduino UNO
 url = http://arduino.vn/bai-viet/531-dieu-khien-lcd-bang-arduino-uno
+
+[besthome.com.vn]
+match = 0.0%%
+title = NỒI LUỘC GÀ 1602-KINGS - BestHome
+url = https://besthome.com.vn/noi-luoc-ga-1602-kings/
+
+[www.3m.com.vn]
+match = 5.6%%
+title = Tất cả sản phẩm 3M
+url = https://www.3m.com.vn/3M/vi_VN/p/
 
