--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-23 05:51:26
+lastsearch = 2024-07-23 10:51:31
 
 [burningman.org]
 match = 0.0%%
@@ -1015,4 +1015,9 @@ url = https://www.12onyourside.com/
 match = -160.0%%
 title = Watch ESPN - Stream Live Sports & ESPN Originals
 url = https://www.espn.com/watch/
+
+[www.fashionsquare.com]
+match = -173.3%%
+title = Scottsdale Fashion Square: Premier Scottsdale Mall
+url = https://www.fashionsquare.com/
 
