--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-23 05:31:16
+lastsearch = 2024-07-23 10:48:43
 
 [xoptraisan.info]
 match = 17.6%%
@@ -67,9 +67,9 @@ title = Thảm nỉ trải sàn ghép miếng thương hiệu Tường Lâm
 url = https://demhong.vn/tham-ni-trai-san-ghep-mieng/
 
 [shopee.vn]
-match = -47.1%%
-title = 1 Tấm THẢM XỐP GHÉP VÂN GỖ 60x60cm/tấm
-url = https://shopee.vn/1-Tấm-THẢM-XỐP-GHÉP-VÂN-GỖ-60x60cm-tấm-i.83850460.1824299401
+match = -111.8%%
+title = Thảm Xốp Vân Gỗ Trung Quốc 60x60 (1 Cốp 4 miếng)
+url = https://shopee.vn/Thảm-Xốp-Vân-Gỗ-Trung-Quốc-60x60-(1-Cốp-4-miếng)-Thảm-Xốp-Siêu-Đẹp-i.317906647.7455933918
 
 [thamtraisan.info]
 match = -76.5%%
