--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-23 09:49:14
+lastsearch = 2024-07-23 10:48:30
 
 [chanrathanhthuy.com]
-match = -6.5%%
-title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
-url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
+match = 9.7%%
+title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
+url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
 
 [demxanh.com]
 match = -16.1%%
@@ -82,9 +82,9 @@ title = Bộ chăn ga gối Cotton sọc vuông hai lớp ZH6289
 url = https://flexhouse.vn/bọ-chan-ga-goi-cotton-soc-vuong-hai-lop-zh6289
 
 [changagoidemsonghong.online]
-match = -22.6%%
-title = Những lưu ý cần nhớ khi chọn chăn ga gối Sông Hồng cưới
-url = https://changagoidemsonghong.online/nhung-luu-y-can-nho-khi-chon-chan-ga-goi-song-hong-cuoi.html
+match = -19.4%%
+title = Top 10+ bộ chăn ga gối Sông Hồng chính hãng giá tốt, được ...
+url = https://changagoidemsonghong.online/top-10-bo-chan-ga-goi-song-hong-chinh-hang-gia-tot-duoc-yeu-thich.html
 
 [www.facebook.com]
 match = -6.5%%
