--- a/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
+++ b/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-phu-warmdream-freesize-phi-lua.html
 lastopen = 2024-06-10 00:45:38
 
 [search]
-lastsearch = 2024-07-23 10:22:51
+lastsearch = 2024-07-23 10:53:43
 
 [changagoidem.co]
 match = 8.3%%
@@ -17,9 +17,9 @@ title = chăn ga lụa giá tốt Tháng 5, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=chăn ga lụa&urlold=set-chan-ga-lua-cao-cap/3056220516971415880/343220106741734172/
 
 [hethongnemtot.com]
-match = -5.3%%
-title = BỘ DRAP MỀN PHI LỤA
-url = https://hethongnemtot.com/bo-drap-men-phi-lua
+match = 0.0%%
+title = BỘ DRAP PHI LỤA (KHÔNG MỀN)
+url = https://hethongnemtot.com/bo-drap-phi-lua-khong-men
 
 [www.facebook.com]
 match = 33.3%%
