--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-23 05:44:41
+lastsearch = 2024-07-23 10:46:19
 
 [www.instagram.com]
-match = -30.8%%
-title = Yuki Chan (@yukichan_la)
-url = https://www.instagram.com/yukichan_la/?hl=en
+match = -23.1%%
+title = Yuki Chan (@meow_kikiki)
+url = https://www.instagram.com/meow_kikiki/
 
 [www.linkedin.com]
-match = 23.1%%
-title = Hoi Chan Studio
-url = https://www.linkedin.com/in/yiu-hoi-chan
+match = -192.3%%
+title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
+url = https://www.linkedin.com/in/hoi-ki-chan-519219147
 
 [www.creativeboom.com]
 match = -307.7%%
@@ -22,9 +22,9 @@ title = Hoi Chan draws on scientific illustrations to create 'muted ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
 
 [www.facebook.com]
-match = 33.3%%
-title = Yuk Hoi Chan
-url = https://www.facebook.com/hoihihoi/
+match = 7.7%%
+title = Yuki-Chan Cosplay
+url = https://www.facebook.com/YukiChansp/
 
 [happypaca.tumblr.com]
 match = -276.9%%
@@ -117,8 +117,8 @@ title = Team
 url = https://www.5plusdesign.com/team
 
 [www.scmp.com]
-match = -300.0%%
-title = Meet the HKU graduate making vegan treats to promote a ...
+match = -223.1%%
+title = Meet the HKU graduate making vegan treats to ...
 url = https://www.scmp.com/yp/discover/news/hong-kong/article/3057691/meet-hku-graduate-making-vegan-treats-promote-plant
 
 [mutualpublishing.com]
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -300.0%%
-title = Hoi Chan Translates Everyday Experiences into ... - Colossal
+match = -215.4%%
+title = Hoi Chan Translates Everyday Experiences into ...
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
