--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-23 02:53:15
+lastsearch = 2024-07-23 10:47:16
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -355,4 +355,9 @@ url = https://www.thietbianhoa.vn/may-u-lac-nhiet-ky-thuat-so-dts-4-hang-elmi-la
 match = -366.7%%
 title = SGC
 url = https://saca.com.vn/en/sgc.html
+
+[dochoimamnon123.com]
+match = -53.3%%
+title = Lắc eo bhs02 - Đồ chơi Bắc Hà
+url = https://dochoimamnon123.com/dung-cu-lac-lung-eo
 
