--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-23 06:28:07
+lastsearch = 2024-07-23 10:49:38
 
 [changagoidemtamhao.com]
 match = -5.0%%
@@ -17,14 +17,14 @@ title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
 url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
 
 [demxanh.com]
-match = -100.0%%
-title = Ga gối chun chần Tencel Pyeoda Hàn Quốc đa sắc 3 món 16
-url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html
+match = -120.0%%
+title = Top 8 thương hiệu nệm bông ép chất lượng nhất hiện nay!
+url = https://demxanh.com/top-thuong-hieu-nem-bong-ep-chat-luong-nhat-hien-nay.html
 
 [www.facebook.com]
-match = -45.0%%
-title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ
-url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-công-ty-tnhhtm-ngọc-dũng-là-công-ty-sản-xuất-chăn-ga-gối-/873479032786443/
+match = -30.0%%
+title = Bong Medallada added a new photo.
+url = https://www.facebook.com/photo.php?fbid=875426837933181&set=a.420530600089476&type=3
 
 [shopee.vn]
 match = -70.0%%
@@ -90,4 +90,19 @@ url = https://changagoidemsonghong.online/cap-nhat-bang-gia-chan-ga-goi-dem-sing
 match = -21.4%%
 title = Bộ Chăn Ga Gối
 url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi
+
+[www.instagram.com]
+match = -145.0%%
+title = MAIDA | Culebra Creek, colcha embroidery by 83 yr-old ...
+url = https://www.instagram.com/maidagoods/p/C7PjkGfSuk_/
+
+[www.tripadvisor.in]
+match = -90.0%%
+title = good nem cua - Reviews, Photos - Bun Cha ho Guom
+url = https://www.tripadvisor.in/ShowUserReviews-g293925-d9750904-r555982942-Bun_Cha_ho_Guom-Ho_Chi_Minh_City.html
+
+[m.youtube.com]
+match = -120.0%%
+title = ETO AND SIKAT sa DEKADA 80 at 90 | Easy-To-Follow ...
+url = https://m.youtube.com/watch?v=Tpt6d2OgyxI&embeds_referring_euri=https://seagateventures.com/&feature=emb_imp_woyt
 
