--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-23 06:13:18
+lastsearch = 2024-07-23 10:47:57
 
 [everonvn.com.vn]
-match = -11.1%%
-title = Bộ Everon Ep1831 - Curtis
-url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
+match = -55.6%%
+title = Vỏ gối đầu Everon Hotgirl giảm giá 30%%
+url = https://everonvn.com.vn/everon/2093/vo-goi-everon-hotgirl
 
 [www.lazada.vn]
 match = -161.1%%
