CI images update

--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-23 05:39:05
+lastsearch = 2024-07-23 11:17:30
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -92,9 +92,9 @@ title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
 url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 
 [books.google.com]
-match = -156.2%%
-title = Địa chí Hòa Bình - Page 879 - Google Books Result
-url = https://books.google.com/books?id=jUZRAQAAMAAJ&pg=PA879&lpg=PA879&dq=chieu+lac+soc+10&source=bl&ots=Mz-HvHGZPo&sig=ACfU3U2nB3MaMDZsX_uNlLPqENZzTYGNug&hl=en&sa=X&ved=2ahUKEwjdhePD2rWHAxUgF1kFHY1YCzkQ6AF6BAgjEAM
+match = -212.5%%
+title = 20 Tác Phẩm Ôn Thi Vào Lớp 10 Môn Văn - Google Books Result
+url = https://books.google.com/books?id=7-4EEQAAQBAJ&pg=PT18&lpg=PT18&dq=chieu+lac+soc+10&source=bl&ots=E378kxRHev&sig=ACfU3U2XKMRgjKhumB6tDh2IYkwep1EWjQ&hl=en&sa=X&ved=2ahUKEwiL2J-Fp7yHAxUEtokEHZcDC5EQ6AF6BAggEAM
 
 [thanglong.chinhphu.vn]
 match = -156.2%%
