--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-22 21:50:39
+lastsearch = 2024-07-23 11:20:36
 
 [munghoangphat.com]
-match = 12.0%%
-title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
+match = -24.0%%
+title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
+url = https://munghoangphat.com/
 
 [tiki.vn]
 match = -28.0%%
@@ -22,9 +22,9 @@ title = Màn chụp vuông - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
 url = https://shopee.vn/list/màn chụp/vuông
 
 [www.mungbaobao.com]
-match = 48.0%%
-title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
-url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-rong-1m6-x-2m-bao-bao.html
+match = -32.0%%
+title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 2024
+url = https://www.mungbaobao.com/
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = Màn chụp tự bung đỉnh vuông cao cấp
 url = https://demvip.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap
 
 [www.lazada.vn]
-match = 4.0%%
-title = MÙNG CHỤP TỰ BUNG ĐỈNH VUÔNG MÀN CHỤP KIỂU ...
-url = https://www.lazada.vn/products/mung-chup-tu-bung-dinh-vuong-man-chup-kieu-dang-tien-loi-cho-cac-phong-ngu-i1921294227.html
+match = -44.0%%
+title = ( BIG SALE ) Màn Chụp Đỉnh Vuông Chân Viền, Mùng ...
+url = https://www.lazada.vn/products/big-sale-man-chup-dinh-vuong-chan-vien-mung-chup-tu-bung-dinh-vuong-chan-vien-hang-cao-cap-bao-hanh-18-thang-i1617727984.html
 
 [everonvn.com.vn]
 match = 0.0%%
