--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-23 05:37:29
+lastsearch = 2024-07-23 11:15:22
 
 [noithathomy.com]
 match = -42.9%%
@@ -22,9 +22,9 @@ title = Thảm trải sàn phòng khách THẢM TRANH BALI LOẠI 2M x ...
 url = https://www.lazada.vn/products/tham-trai-san-phong-khach-tham-tranh-bali-loai-2m-x-3m-i356266333.html
 
 [tiki.vn]
-match = -9.5%%
-title = Mua Thảm trải sàn Bali 2m*3m nhiều mẫu
-url = https://tiki.vn/thanh-ly-tham-trai-san-bali-2m-3m-gia-449k-nhieu-mau-p143200696.html
+match = -128.6%%
+title = Thảm trải sàn, thảm lì Bali, thảm trang trí phòng khách 2m x ...
+url = https://tiki.vn/tham-trai-san-tham-li-bali-tham-trang-tri-phong-khach-2m-x-3m-p76292949.html
 
 [muachunghaiphong.com]
 match = 0.0%%
