--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-23 02:12:53
+lastsearch = 2024-07-23 11:47:28
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,14 +17,14 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [shopee.vn]
-match = -42.9%%
-title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
-url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
+match = -95.2%%
+title = chiếu tre thái lan loại 1 , hàng có sẵn m2xm9, m5x m9 ...
+url = https://shopee.vn/chiếu-tre-thái-lan-loại-1-hàng-có-sẵn-m2xm9-m5x-m9-m8x2m-2mx2m2-i.264060043.8153444972
 
 [demxanh.com]
-match = 14.3%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -81.0%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [www.lazada.vn]
 match = -85.7%%
