--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-22 23:39:39
+lastsearch = 2024-07-23 11:45:09
 
 [en.wikipedia.org]
-match = 8.7%%
-title = Korea under Japanese rule
-url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
+match = 0.0%%
+title = March First Movement
+url = https://en.wikipedia.org/wiki/March_First_Movement
 
 [www.britannica.com]
 match = 0.0%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/1/19/north-korea-touts-underwater-nucl
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=da4bf7f7e18dacaf&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwixy_ze67qHAxUZ8MkDHY2yBvAQsZYEegQIWhAC
+url = https://www.google.com/search?sca_esv=53dc40f9498de961&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjpu8GcrbyHAxU7EGIAHQ6PDzcQsZYEegQIVBAC
 
 [produccionesitaca.es]
 match = -21.4%%
