CI images update

--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-07-23 01:52:32
+lastsearch = 2024-07-23 12:18:21
 
 [www.diepxuan.com]
 match = -64.7%%
@@ -27,9 +27,9 @@ title = Combo 2 chiếc gối bông cotton korea 65cm x 45cm
 url = https://shopee.vn/Combo-2-chiếc-gối-bông-cotton-korea-65cm-x-45cm-01-cặp-ruột-gối-bông-cao-cấp-i.135534164.7132132800
 
 [demxanh.com]
-match = -100.0%%
-title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html
+match = -205.9%%
+title = Back to School 2023| Trợ giá cực cool cho học sinh, sinh viên
+url = https://demxanh.com/back-to-school-2023-tro-gia-cuc-cool.html
 
 [everonkorea.com]
 match = -100.0%%
@@ -102,9 +102,9 @@ title = Gối ôm bông - Nệm Việt Chất
 url = https://nemvietchat.com/goi-om-bong-dvhe3234
 
 [www.youtube.com]
-match = -100.0%%
-title = Escaping Seoul & A Weekend In Jeollabuk-do
-url = https://www.youtube.com/watch?v=HAz6FHL4Hdw
+match = -176.5%%
+title = KOREA VLOG: cafe hopping, where to shop, how I packed ...
+url = https://www.youtube.com/watch?v=lxIF-gx-y6U
 
 [www.snbshop.vn]
 match = -41.2%%
@@ -140,4 +140,24 @@ url = https://www.tripadvisor.com/Restaurant_Review-g294197-d4085151-Reviews-Gom
 match = 0.0%%
 title = 
 url = https://www.rome2rio.com/s/India/Seoul
+
+[www.kimmyseltzer.com]
+match = -182.4%%
+title = How Your Marriage Ends: Relationship-Killing Behavior ...
+url = https://www.kimmyseltzer.com/how-your-marriage-ends-relationship-killing-behavior-and-communication-habits-with-matthew-fray/
+
+[fitesvietnam.com.vn]
+match = -70.6%%
+title = Consultant in import-export procedures
+url = http://fitesvietnam.com.vn/index.php/en/cac-dich-vu-da-cung-cap/Consultant-in-import-export-procedures/Consultant-in-import-export-procedures-5/
+
+[neginmirsalehi.com]
+match = -70.6%%
+title = Saturday Appropriate - Negin Mirsalehi
+url = http://neginmirsalehi.com/fashion/saturday-appropriate
+
+[storymaps.library.villanova.edu]
+match = -200.0%%
+title = Neon ninja solo u6 Zivnosti druhy He mentioned his ex Ira ...
+url = https://storymaps.library.villanova.edu/GEV4320-Spring2020/map.php?path=http://фсорвш.рф/jO3qtrC11fe43v
 
