--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-23 06:21:00
+lastsearch = 2024-07-23 12:19:07
 
 [changagoidemsonghong.com]
-match = -50.0%%
-title = Bảng giá Chăn Ga Gối Đệm Sông Hồng chính hãng 2024 ...
-url = https://changagoidemsonghong.com/
+match = 4.2%%
+title = Chăn ga gối classic cotton mã C16-C38
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
 
 [www.diepxuan.com]
 match = -58.3%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối đệm Cotton poly đáng yêu Mẫu 16 - Nắng Sto
 url = https://nangstore.vn/bo-chan-ga-goi-de-m-cotton-poly-da-ng-yeu-ma-u-16
 
 [chanrathanhthuy.com]
-match = 50.0%%
-title = Chăn ga gối đệm giá rẻ
-url = https://chanrathanhthuy.com/tin-tuc/chan-ga-goi-dem-gia-re-1209.html
+match = 25.0%%
+title = 10 bộ chăn ga gối đệm tencel đẹp nhất
+url = https://chanrathanhthuy.com/tin-tuc/10-bo-chan-ga-goi-dem-tencel-dep-nhat-714.html
 
 [myhunggia.com]
 match = -4.2%%
