--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-07-23 10:41:54
+lastsearch = 2024-07-23 12:20:01
 
 [www.kymdan.com]
 match = 4.2%%
@@ -17,9 +17,9 @@ title = Bộ Ga Chun Tencel Việt Á - Siêu Mát [SALE -50%%]
 url = https://thegioidemviet.vn/bo-ga-chun-he-tc08/
 
 [toanhuyen.vn]
-match = 6.2%%
-title = Bộ Chăn Ga 160x200cm Ga Phủ Lasante Vải Tencel
-url = https://toanhuyen.vn/san-pham/bo-chan-ga-160x200cm-ga-phu-lasante-vai-tencel-lily-xanh-ghi/
+match = -3.1%%
+title = Bộ Chăn Ga 160x200cm Ga Chun Chần Lasante Vải Tencel
+url = https://toanhuyen.vn/san-pham/bo-chan-ga-160x200cm-ga-chun-chan-lasante-vai-tencel-lily-xanh-ghi/
 
 [yeshomebedding.com]
 match = 0.0%%
@@ -57,9 +57,9 @@ title = Bộ ga chun chăn chần Hanvico Rosa tencel 5CT - 1286
 url = https://sieuthidemcaocap.vn/bo-ga-chun-chan-chan-hanvico-rosa-tencel-5ct-1286/
 
 [everonhanoi.com.vn]
-match = 10.7%%
-title = Bộ Everon Ep1735 (Hot Girls)
-url = https://everonhanoi.com.vn/bo-everon-ep1735-hot-girls
+match = -41.2%%
+title = Bộ Everon Es 1801
+url = https://everonhanoi.com.vn/bo-everon-es1801
 
 [vnexpress.net]
 match = -21.9%%
