--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-23 09:46:11
+lastsearch = 2024-07-23 12:15:17
 
 [en.wikipedia.org]
-match = -45.5%%
-title = Tetsu Inada
-url = https://en.wikipedia.org/wiki/Tetsu_Inada
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Chan_Mali_Chan
 
 [kpop.fandom.com]
 match = -47.1%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVKHYt4a&sig=ACfU3U1IYZlr69Sng6jl3gKhzmykXwfMLw&hl=en&sa=X&ved=2ahUKEwjd9tjQkryHAxXpkIkEHYVvAJYQ6AF6BAgbEAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVKIXt_g&sig=ACfU3U1wQv3T8rGLWDBvkoVl_5KRl7UoGg&hl=en&sa=X&ved=2ahUKEwiSqtT6s7yHAxXxFlkFHSWrCzUQ6AF6BAg5EAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -235,4 +235,9 @@ url = https://forumketqua1.net/
 match = -188.2%%
 title = The Killer Queen Experience Wollongong Tickets, Centro ...
 url = https://www.bandsintown.com/e/105390513-the-killer-queen-experience-at-centro-cbd
+
+[www.frontiersin.org]
+match = -141.2%%
+title = MCSNet: Channel Synergy-Based Human-Exoskeleton ...
+url = https://www.frontiersin.org/journals/neuroscience/articles/10.3389/fnins.2021.704603/full
 
