--- a/images/nem-diamond-re-160x200x09/config.ini
+++ b/images/nem-diamond-re-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-diamond-re-160x200x09.html
 lastopen = 2024-06-10 12:36:25
 
 [search]
-lastsearch = 2024-07-23 11:21:39
+lastsearch = 2024-07-23 12:16:13
 
 [www.reddit.com]
 match = -60.0%%
@@ -17,9 +17,9 @@ title = Nệm Diamond RE 160x200x09 - Điệp Xuân
 url = https://www.diepxuan.com/nem-diamond-re-160x200x09.html
 
 [forums.radioreference.com]
-match = -83.3%%
-title = Base antenna
-url = http://forums.radioreference.com/threads/base-antenna.459722/
+match = -7.7%%
+title = Diamond X300N
+url = http://forums.radioreference.com/threads/diamond-x300n.399898/
 
 [orchid.ganoksin.com]
 match = -24.0%%
