--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-23 10:23:25
+lastsearch = 2024-07-23 12:18:29
 
 [demtot.com]
 match = 4.8%%
@@ -48,8 +48,8 @@ url = https://www.diepxuan.com/nem-tuan-anh.html
 
 [sieuthidemonline.vn]
 match = -66.7%%
-title = Nệm lò xo giàn Techwood cao cấp - Bảng giá khuyến mại!
-url = https://sieuthidemonline.vn/bang-gia-nem-lo-xo-gian-techwood/
+title = Nệm lò xo túi Acnes cao cấp - Bảng giá khuyến mại!
+url = https://sieuthidemonline.vn/nem-lo-xo-tui-acnes/
 
 [demsingapore.com]
 match = 19.0%%
