--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-07-23 02:48:08
+lastsearch = 2024-07-23 12:17:25
 
 [shopee.vn]
 match = -57.1%%
@@ -52,9 +52,9 @@ title = Thảm Trải Giường Đa Năng. thảm nhung cao cấp trải ...
 url = https://www.lazada.vn/products/tham-trai-giuong-da-nang-tham-nhung-cao-cap-trai-giuong-am-ap-tang-kem-2-vo-goi-cung-loai-kt-16-x-2m-i872064502.html
 
 [www.facebook.com]
-match = 33.3%%
-title = Thảm Trải Giường | Hanoi
-url = https://www.facebook.com/ShopThamTraiGiuong/
+match = -85.7%%
+title = NÉT RIÊNG CUỐN HÚT TỪ GIƯỜNG MAXINE Nằm trong bộ ...
+url = https://www.facebook.com/nhaxinhvn/videos/nét-riêng-cuốn-hút-từ-giường-maxinenằm-trong-bộ-sưu-tập-cùng-tên-chiếc-giường-gỗ/728754454752154/
 
 [sagatexvietnam.com.vn]
 match = -81.0%%
