--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-23 11:19:31
+lastsearch = 2024-07-23 12:18:47
 
 [www.tui.co.uk]
-match = 0.0%%
-title = Buy South Korean won
-url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
+match = -266.7%%
+title = Foreign Currency Exchange Rates | TUI Travel Money
+url = https://www.tui.co.uk/travel-money/currencies/
 
 [uk.trip.com]
 match = -233.3%%
